deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-service
  labels:
    app: flask-grpc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-grpc-app
  template:
    metadata:
      labels:
        app: flask-grpc-app
    spec:
      containers:
      - name: flask-grpc-app
        image: flask-grpc-app:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
